changed artworks to artwork

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -92,9 +92,9 @@
 		"choose_a_password": "Choose a password",
 		"starting_at": "Starting at",
 		"project_board": "Project board",
-		"project_board_hint": "Here you see the artworks you chose alongside the picture of your space",
-		"explore_artworks": "Explore Artworks",
-		"explore_artworks_hint": "Here you discover and choose artworks to your project",
+		"project_board_hint": "Here you see the artwork you chose alongside the picture of your space",
+		"explore_artwork": "Explore Artwork",
+		"explore_artwork_hint": "Here you discover and choose artwork to your project",
 		"edit_name": "Edit name",
 		"upload_space_image": "Upload image",
 		"save_collection": "Save project",
@@ -178,11 +178,11 @@
 		"done": "Done",
 		"step1" :"1. Upload a picture of your room <i class='fa fa-upload'></i> or choose one from our library <i class='fa fa-picture-o'></i>",
 		"step2" :"2. Choose the filter that fits your vision",
-		"step3" :"3. Select the artworks according to your preferred color",
-		"step4" :"4. Pick the artworks that you like",
-		"step5" :"5. See the artworks you chose appear on your project board",
+		"step3" :"3. Select the artwork according to your preferred color",
+		"step4" :"4. Pick the artwork that you like",
+		"step5" :"5. See the artwork you chose appear on your project board",
 		"step6" :"6. Start your designing process with the artwork your choose in visual tool",
-		"step7" :"7. Enjoy our visualization tool, see the artworks in your space and select the canvas size that you like",
+		"step7" :"7. Enjoy our visualization tool, see the artwork in your space and select the canvas size that you like",
 		"step8" :"8. Return to the home page, what will save your collection",
 		"step9" :"9. Continue to purchase and make your design reality",
 		"step10" :"10. Let’s Start!"
