--- a/client/src/assets/i18n/he.json
+++ b/client/src/assets/i18n/he.json
@@ -94,8 +94,8 @@
 		"starting_at": "החל מ",
 		"project_board": "עריכת פרוייקט",
 		"project_board_hint": "כאן אתה רואה את הפריטים שבחרת לצד תמונת החדר",
-		"explore_artworks": "מצא פריטים",
-		"explore_artworks_hint": "כאן את מוצא ובוחר אמנות לפרוייקט שלך",
+		"explore_artwork": "מצא פריטים",
+		"explore_artwork_hint": "כאן את מוצא ובוחר אמנות לפרוייקט שלך",
 		"edit_name": "ערוך שם",
 		"upload_space_image": "העלאת תמונה של החלל",
 		"save_collection": "שמור פרוייקט",
